feat : mise à jour de la page index

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
                     </a>
                 </div>
                 <p>
-                    Actuellement étudiant en deuxième année de BUT Informatique, je suis à la recherche d’un stage de 8
-                    à 10 semaines à partir de maintenant. Ce stage représente pour moi une opportunité de mettre en
-                    pratique mes compétences dans un cadre professionnel stimulant.
+                    Actuellement étudiant en deuxième année de BUT Informatique, je suis à la recherche d’une alternance à partir de maintenant. J’aimerais mettre à profit mes compétences et mon expérience auprès d’une entreprise afin de contribuer activement à ses projets tout en poursuivant ma formation.
                 </p>
             </div>
         </div>
