--- a/projets.html
+++ b/projets.html
@@ -154,7 +154,7 @@
                     <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
                     </a>
-                    <a href="CompetitionEscalade/escalade.html" class="bonton2">
+                    <a href="CompetitionEscalade/escalade.html" class="bonton2" target="_blank">
                         <p style="margin: 0;">Site Résultat</p>
                     </a>
                 </div>
