--- a/cv.html
+++ b/cv.html
@@ -207,6 +207,9 @@
                 <h3>2018 - Maintenant</h3>
                 <h2>Escalade</h2>
                 <p class="secret">Niveau max : 7C</p>
+                <div style="display: flex; justify-content: center;">
+                    <img class="image-projet" src="css/img/COBE-Logo.png" alt="Orchestra - TravelSoft">
+                </div>
             </div>
             <div class="sectioncv3">
                 <p>
