fix : orthographe and update

--- a/projets.html
+++ b/projets.html
@@ -141,7 +141,7 @@
                 <div style="display: flex;">
                     <div class="carre3"></div>
                     <div style="padding: 0 20px">
-                        <h3>Exel Compétition Escalade</h3>
+                        <h3>Excel Compétition Escalade</h3>
                         <h2 style="font-weight: normal">Projet Personnel</h2>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/exel1.png" alt="Exel">
+                <img src="css/img/Excel_Compétition.png" alt="Exel">
             </div>
         </div>
     </div>
