Feat : Rapport de stage

--- a/cv.html
+++ b/cv.html
@@ -77,7 +77,7 @@
                 <h2 style="font-weight: normal">Paris, France</h2>
                 <h2 style="font-weight: normal">8 semaines</h2>
                 <br>
-                <a href="" class="bonton2">
+                <a href="docs/Rapport_Stage_BONS_Orchestra_TravelSoft.pdf" class="bonton2" target="_blank">
                     <p style="margin: 0;">Rapport</p>
                 </a>
                 <br>
