fix : Titre page

--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyprien Bons - CV</title>
+    <title>Cyprien Bons - PROJETS</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
     <div class="header2">
         <a href="index.html">À PROPOS DE MOI</a>
         <a href="cv.html">CV</a>
-        <a href="projets.html" class="actuel">Projets</a>
+        <a href="projets.html" class="actuel">PROJETS</a>
     </div>
     <!-- Bouton burger -->
     <div class="burger-menu" id="burger-menu">
@@ -30,7 +30,7 @@
     <nav class="burger-nav" id="burger-nav">
         <a href="index.html">À PROPOS DE MOI</a>
         <a href="cv.html">CV</a>
-        <a href="projets.html" class="actuel">Projets</a>
+        <a href="projets.html" class="actuel">PROJETS</a>
     </nav>
     <script src="js/script.js"></script>
 </header>
