--- a/cv.html
+++ b/cv.html
@@ -18,7 +18,7 @@
     <div class="header2">
         <a href="index.html">À PROPOS DE MOI</a>
         <a href="cv.html" class="actuel">CV</a>
-        <a href="projets.html">Projets</a>
+        <a href="projets.html">PROJETS</a>
     </div>
     <!-- Bouton burger -->
     <div class="burger-menu" id="burger-menu">
@@ -30,7 +30,7 @@
     <nav class="burger-nav" id="burger-nav">
         <a href="index.html">À PROPOS DE MOI</a>
         <a href="cv.html" class="actuel">CV</a>
-        <a href="projets.html">Projets</a>
+        <a href="projets.html">PROJETS</a>
     </nav>
     <script src="js/script.js"></script>
 </header>
