--- a/projets.html
+++ b/projets.html
@@ -39,7 +39,7 @@
     <div class="resWidth">
         <div style="display: flex; align-items: center; justify-content: center">
             <div class="carre1"></div>
-            <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Projet</strong></p>
+            <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Projets</strong></p>
         </div>
         <div class="section">
             <div class="sectionprojet1">
