Feat : Update CV

--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
         </div>
         <div style="display: flex; justify-content: space-between; margin: 20px;">
             <h1>Formation</h1>
-            <a href="docs/CV_2024_Cyprien_BONS_INFORMATIQUE_V11.pdf" class="bonton3" target="_blank">
+            <a href="docs/CV_BONS.pdf" class="bonton3" target="_blank">
                 TÉLÉCHARGER CV
             </a>
         </div>
