--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -6,6 +6,7 @@
     <title>Compétition Résultat</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../css/img/Logo_COBE.png">
 </head>
 <header>
     <a href="../CompetitionEscalade/escalade.html" class="header">
