--- a/CompetitionEscalade/2000Test/2000Test.html
+++ b/CompetitionEscalade/2000Test/2000Test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compétition Résultat</title>
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="icon" type="image/png" href="../../css/img/Logo_COBE.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
