--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyprien Bons - CV</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="css/img/Logo_CB.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
