--- a/projets.html
+++ b/projets.html
@@ -56,9 +56,9 @@
                     Il s'agit d'un jeu vidéo de type plateformer "die and retry" qui nous a permis de découvrir Unity.
                     Vous pouvez retrouver le projet et y jouer sur Windows et Mac en cliquant sur le bouton ci-dessous.
                 </p>
-                <div style="display: flex; justify-content: center; padding: 20px 0">
+                <div class="bonton-container">
                     <a href="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Voir le projet</p>
+                        <p style="margin: 0;">Drive</p>
                     </a>
                 </div>
             </div>
@@ -78,12 +78,12 @@
                 <p style="padding: 5px 15px">
                     Création d'un site web e-commerce de vente de parfums réalisé en PHP avec une connexion à une base de données. Gestion des utilisateurs, des produits, des ventes et des paniers.
                 </p>
-                <div style="display: flex; justify-content: center; padding: 20px 0; gap: 20px">
+                <div class="bonton-container">
                     <a href="https://github.com/M2M2005/E-Commerce" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Voir le projet</p>
+                        <p style="margin: 0;">Github</p>
                     </a>
                     <a href="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/Projetweb/web/controleurFrontal.php" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Site du projet</p>
+                        <p style="margin: 0;">Site Web</p>
                     </a>
                 </div>
             </div>
@@ -105,9 +105,9 @@
                     Ce site présente également mon parcours académique, mes expériences professionnelles.
                     Il reflète mon savoir-faire en conception web. Vous y trouverez une section dédiée à mes réalisations.
                 </p>
-                <div style="display: flex; justify-content: center; padding: 20px 0">
+                <div class="bonton-container">
                     <a href="https://github.com/M2M2005/Site-Web" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Voir le projet</p>
+                        <p style="margin: 0;">Github</p>
                     </a>
                 </div>
             </div>
@@ -127,9 +127,9 @@
                 <p style="padding: 5px 15px">
                     Le projet consiste à créer un système de référendums sécurisés, permettant à une entreprise de gérer des votes de manière cryptée et confidentielle.
                 </p>
-                <div style="display: flex; justify-content: center; padding: 20px 0">
+                <div class="bonton-container">
                     <a href="https://github.com/M2M2005/Referendum" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Voir le projet</p>
+                        <p style="margin: 0;">Github</p>
                     </a>
                 </div>
             </div>
@@ -151,12 +151,15 @@
                     Le calcul des résultats est enregistré dans une Google Sheet, et un site web récupère dynamiquement ces résultats via l'API Google Sheets en JavaScript pour les afficher.
                     Une interface a été développée sur Google Sheets, intégrant des boutons permettant d'automatiser certaines tâches, comme l'ajout de participants et de catégories, grâce à Google Apps Script.
                 </p>
-                <div style="display: flex; justify-content: center; padding: 20px 0; gap: 20px">
+                <div class="bonton-container">
                     <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Voir le projet</p>
+                        <p style="margin: 0;">Drive</p>
+                    </a>
+                    <a href="https://github.com/M2M2005/Site-Web" class="bonton2" target="_blank">
+                        <p style="margin: 0;">Github</p>
                     </a>
                     <a href="CompetitionEscalade/escalade.html" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Site Résultat</p>
+                        <p style="margin: 0;">Site Web</p>
                     </a>
                 </div>
             </div>
