fix: Bug liens + nom fichier

--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -58,19 +58,19 @@
             <div class="sectionEscalade">
                 <h3>Résultats Samedi 24 Mai 2025</h3>
                 <div style="display: flex; margin: 20px; gap: 20px">
-                    <a href="2025/2025%20SM.html" class="bonton2">
+                    <a href="2025/2025_SM.html" class="bonton2">
                         <p style="margin: 0;">Matin</p>
                     </a>
-                    <a href="2025/2025%20SAM.html" class="bonton2">
+                    <a href="2025/2025_SAM.html" class="bonton2">
                         <p style="margin: 0;">Après midi</p>
                     </a>
                 </div>
                 <h3>Résultats Dimanche 25 Mai 2025</h3>
                 <div style="display: flex; margin: 20px; gap: 20px">
-                    <a href="2025/2025%20DM.html" class="bonton2">
+                    <a href="2025/2025_DM.html" class="bonton2">
                         <p style="margin: 0;">Matin</p>
                     </a>
-                    <a href="2025/2025%20SAM.html" class="bonton2">
+                    <a href="2025/2025_DAM.html" class="bonton2">
                         <p style="margin: 0;">Après midi</p>
                     </a>
                 </div>
