fix : Transfert de fichier Compétition Escalade

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Page Not Found</title>
-  <link rel="icon" type="image/png" href="css/img/Logo_CB.png">
+  <link rel="icon" type="image/png" href="img/Logo_CB.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * {
