--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyprien Bons - CV</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="css/img/Logo_CB.png">
+    <link rel="icon" type="image/png" href="img/Logo_CB.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
@@ -57,7 +57,7 @@
                 <h2 style="font-weight: normal">En cours de formation</h2>
                 <br>
                 <div style="display: flex; justify-content: center;">
-                    <img class="image-projet" src="css/img/iut-Montpellier-cete.jpeg" alt="IUT - Montpellier - Cète">
+                    <img class="image-projet" src="img/iut-Montpellier-cete.jpeg" alt="IUT - Montpellier - Cète">
                 </div>
             </div>
             <div class="sectioncv3">
@@ -83,7 +83,7 @@
                 </a>
                 <br>
                 <div style="display: flex; justify-content: center;">
-                    <img class="image-projet" src="css/img/orchestra-plateforme.jpg" alt="Orchestra - TravelSoft">
+                    <img class="image-projet" src="img/orchestra-plateforme.jpg" alt="Orchestra - TravelSoft">
                 </div>
             </div>
             <div class="sectioncv3">
@@ -106,7 +106,7 @@
                 <h2 style="font-weight: normal">Admis avec Mention Assez Bien</h2>
                 <br>
                 <div style="display: flex; justify-content: center;">
-                    <img class="image-projet" src="css/img/d'alzon.png" alt="D'Alzon Logo">
+                    <img class="image-projet" src="img/d'alzon.png" alt="D'Alzon Logo">
                 </div>
             </div>
             <div class="sectioncv3">
@@ -198,6 +198,10 @@
                         </div>
                     </div>
                 </div>
+                <p>Vous pouvez consulter mon Portfolio d'apprentissage pour consulter le lien entre les compétences de ma troisième année de BUT et mes projets :</p>
+                <a href="portfolio-apprentissage.html" class="bonton2" style="width: 300px; font-size: 14px">
+                    <p style="margin: 0;">Voir mon Portfolio d’apprentissage</p>
+                </a>
             </div>
         </div>
         <div style="margin-top: 50px">
@@ -209,7 +213,7 @@
                 <h2>Escalade</h2>
                 <p class="secret">Niveau max : 7C</p>
                 <div style="display: flex; justify-content: center;">
-                    <img class="image-projet" src="css/img/COBE-Logo.png" alt="Orchestra - TravelSoft">
+                    <img class="image-projet" src="img/COBE-Logo.png" alt="Orchestra - TravelSoft">
                 </div>
             </div>
             <div class="sectioncv3">
@@ -241,10 +245,10 @@
                 <h2>En ligne</h2>
                 <div style="display: flex; justify-content: space-evenly;">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
+                        <img src="img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="css/img/github.svg" alt="GitHub" style="width: 18px;">
+                        <img src="img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
             </div>
