--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyprien Bons - À PROPOS DE MOI</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="css/img/Logo_CB.png">
+    <link rel="icon" type="image/png" href="img/Logo_CB.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
@@ -41,17 +41,17 @@
         <div class="profil">
             <div style="box-shadow: 10px 10px rgba(0,0,0,0.1); height: 100%">
                 <div class="profil1" >
-                    <img src="css/img/cyprien.jpg" alt="Photo de profil" class="imgprofil">
+                    <img src="img/cyprien.jpg" alt="Photo de profil" class="imgprofil">
                     <p class="titreprofil2"><Strong>Cyprien<br>Bons</Strong></p>
                     <div class="trait"></div>
                     <p>Étudiant en Informatique</p>
                 </div>
                 <div class="profilicon">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 25px;">
+                        <img src="img/linkedin.svg" alt="Linkedin" style="width: 25px;">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="css/img/github.svg" alt="GitHub" style="width: 25px;">
+                        <img src="img/github.svg" alt="GitHub" style="width: 25px;">
                     </a>
                 </div>
             </div>
@@ -92,10 +92,10 @@
                 <h2>En ligne</h2>
                 <div style="display: flex; justify-content: space-between; gap: 10px">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
+                        <img src="img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="css/img/github.svg" alt="GitHub" style="width: 18px;">
+                        <img src="img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
             </div>
