--- a/projets.html
+++ b/projets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyprien Bons - PROJETS</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="css/img/Logo_CB.png">
+    <link rel="icon" type="image/png" href="img/Logo_CB.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/LegendsBuster.png" alt="LegendsBuster">
+                <img src="img/LegendsBuster.png" alt="LegendsBuster">
             </div>
         </div>
         <div class="section">
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/site-e-commerce.png" alt="Site E-Commerce">
+                <img src="img/site-e-commerce.png" alt="Site E-Commerce">
             </div>
         </div>
         <div class="section">
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/site-this.png" alt="Port Folio">
+                <img src="img/site-this.png" alt="Port Folio">
             </div>
         </div>
         <div class="section">
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/referendum.png" alt="Referendum">
+                <img src="img/referendum.png" alt="Referendum">
             </div>
         </div>
         <div class="section">
@@ -158,13 +158,13 @@
                     <a href="https://github.com/M2M2005/Site-Web" class="bonton2" target="_blank">
                         <p style="margin: 0;">Github</p>
                     </a>
-                    <a href="CompetitionEscalade/escalade.html" class="bonton2" target="_blank">
+                    <a href="https://cobescalade.cyprienbons.com/" class="bonton2" target="_blank">
                         <p style="margin: 0;">Site Web</p>
                     </a>
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/Excel_Compétition.png" alt="Exel">
+                <img src="img/Excel_Compétition.png" alt="Exel">
             </div>
         </div>
     </div>
@@ -188,10 +188,10 @@
                 <h2>En ligne</h2>
                 <div style="display: flex; justify-content: space-between; gap: 10px">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
+                        <img src="img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="css/img/github.svg" alt="GitHub" style="width: 18px;">
+                        <img src="img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
             </div>
